--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5a2d8f25c5.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
-    <title>Age Calculator</title>
+    <title>AgeMaster</title>
 </head>
 <body>
     <div class="main-div">
